[project]
name = "hexinfra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guilherme Asai Oliveira", email = "guiasaio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hexinfra = "hexinfra:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
